@@ -1,3 +1,8 @@
+2020-04-17  Mark Wielaard  <mark@klomp.org>
+
+	* Makefile.am (test-nlist$): New goal with minimal CFLAGS.
+	(test_nlist_CFLAGS): New variable.
+
 2020-03-28  Frank Ch. Eigler  <fche@redhat.com>
 
 	* run-debuginfod-find.sh: Test timestamps of archive-origin files.
